Fix alignment on main page

--- a/src/index.css
+++ b/src/index.css
@@ -171,8 +171,7 @@ td {
 }
 
 #title img {
-  padding: 5%;
-  width: 100%;
+  width: 95%;
   max-width: 700px;
 }
 
